Don't store items locally when we don't have to